# Takh-old

./: Cargo.toml  Readme.md  Settings.ron  takh-client
client/: Cargo.toml
client/src/: error.rs  lib.rs  main.rs  settings.rs  state.rs  window.rs
client/src/opengl/: build.rs
client/src/opengl/src/: lib.rs
client/src/render/: error.rs  framebuffer.rs  mesh.rs  mod.rs  shader.rs  texture.rs
client/src/scene/: camera.rs  mod.rs  player.rs  world.rs
common/: Cargo.toml
common/src/: ecsres.rs  lib.rs  state.rs  sys.rs
common/src/components/: mod.rs  physics.rs  player.rs
common/src/net/: client.rs  mod.rs  packet.rs  server.rs  types.rs  world.rs
common/src/world/: chunk.rs  mod.rs  voxel.rs  world.rs
res/client/shaders/: chunk.fs  chunk.vs
res/client/shaders/postprocess/: basic.fs  basic.vs
res/shaders/: triangle.fs  triangle.vs
server/: Cargo.toml
server/src/: lib.rs  main.rs  settings.rs
src/: error.rs  lib.rs  main.rs  settings.rs  state.rs  window.rs
src/opengl/: Cargo.toml  build.rs
src/opengl/src/: lib.rs
src/render/: mesh.rs  mod.rs  shader.rs  texture.rs
src/scene/: camera.rs  mod.rs  world.rs
