[package]
name = "takh-client"
version = "0.1.0"
authors = ["serxka <serxka@protonmail.com>"]
edition = "2018"

[dependencies]
# Internal
common = { path = "../common", features = ["client"] }

# Graphics
gl = { path = "./src/opengl" }
glutin = "0.26"
winit = { version = "0.24", features = ["serde"] }

# Game Logic
specs = "0.16"

# Async
tokio = { version = "1.4", features = ["rt-multi-thread", "net"] }

# Math
# ultraviolet = "0.8"
vek = "0.15"

# File
image = "0.23"
ron = "0.6"
serde = "1"

# Misc
log = "0.4"
simple_logger = "1.11"
