[package]
name = "common"
version = "0.1.0"
authors = ["serxka <serxka@protonmail.com>"]
edition = "2018"

[dependencies]
# Game Logic
specs = "0.16"

# Math
# ultraviolet = { version = "0.8", features = ["f64"] }
vek = "0.15"
noise = "0.7"

# File
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Misc
uuid = "0.8"

[features]
client = []
server = []
