[package]
name = "takh-server"
version = "0.1.0"
authors = ["serxka <serxka@protonmail.com>"]
edition = "2018"

[dependencies]
# Internal
common = { path = "../common", features = ["server"] }

# Game Logic
specs = "0.16"

# Async
tokio = { version = "1.4", features = ["rt-multi-thread", "net"] }

# File
ron = "0.6"
serde = "1"

# Misc
log = "0.4"
simple_logger = "1.11"
